--- a/index.html
+++ b/index.html
@@ -19,133 +19,145 @@
   </head>
   <body>
     <header class="header">
-      <nav>
-        <a href="./index.html" lang="en" class="logo"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <ul class="navigation">
-          <li><a href="#" class="navigation-item">Студія</a></li>
+      <div class="container">
+        <nav class="main-nav">
+          <a href="./index.html" lang="en" class="logo"
+            ><span class="logo-accent">Web</span>Studio</a
+          >
+          <ul class="navigation">
+            <li><a href="#" class="navigation-item">Студія</a></li>
+            <li>
+              <a href="./portfolio.html" class="navigation-item">Портфоліо</a>
+            </li>
+            <li><a href="#" class="navigation-item">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contacts">
           <li>
-            <a href="./portfolio.html" class="navigation-item">Портфоліо</a>
+            <a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a>
           </li>
-          <li><a href="#" class="navigation-item">Контакти</a></li>
+          <li>
+            <a href="" class="contacts-item">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-      <ul class="contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-item"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contacts-item"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="main-button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="main-button">Замовити послугу</button>
+        </div>
       </section>
+
       <section class="features">
-        <h2 class="visually-hidden">Особливості</h2>
-        <ul class="features-list">
-          <li>
-            <h3 class="features-item">Увага до деталей</h3>
-            <p class="feature-parapraph">
-              Ідейні міркування, i навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-item">Пунктуальність</h3>
-            <p class="feature-parapraph">
-              Завдання організації, особливо рамки i місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-item">Планування</h3>
-            <p class="feature-parapraph">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-item">Сучасні технології</h3>
-            <p class="feature-parapraph">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Особливості</h2>
+          <ul class="features-list">
+            <li>
+              <h3 class="features-item">Увага до деталей</h3>
+              <p class="feature-parapraph">
+                Ідейні міркування, i навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-item">Пунктуальність</h3>
+              <p class="feature-parapraph">
+                Завдання організації, особливо рамки i місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-item">Планування</h3>
+              <p class="feature-parapraph">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-item">Сучасні технології</h3>
+              <p class="feature-parapraph">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="gallery">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="gallery-list">
-          <li>
-            <img src="./images/img1.jpg" alt="Руки на клавіатурі" width="370" />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Робота з телефоном та комп'ютером"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Палітра кольорів на планшеті"
-              width="370"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="gallery-list">
+            <li>
+              <img src="./images/img1.jpg" alt="Руки на клавіатурі" width="370" />
+            </li>
+            <li>
+              <img src="./images/img2.jpg" alt="Робота з телефоном та комп'ютером" width="370" />
+            </li>
+            <li>
+              <img src="./images/img3.jpg" alt="Палітра кольорів на планшеті" width="370" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
-          <li class="card">
-            <img
-              src="./images/colleague1.jpg"
-              alt="Усміхнений хлопець в окулярах"
-              width="270"
-            />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-position">Product Designer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/colleague2.jpg"
-              alt="Усміхнена дівчина в піджаку"
-              width="270"
-            />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-position">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/colleague3.jpg"
-              alt="Усміхнений хлопець в блакитній сорочці"
-              width="270"
-            />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-position">Marketing</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/colleague4.jpg"
-              alt="Хлопець в окулярах та чорній футболці"
-              width="270"
-            />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="card">
+              <div class="card-team-container">
+                <img
+                  src="./images/colleague1.jpg"
+                  alt="Усміхнений хлопець в окулярах"
+                  width="270"
+                />
+                <div class="name-team-container">
+                  <h3 class="team-name">Ігор Дем'яненко</h3>
+                  <p class="team-position">Product Designer</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card-team-container">
+                <img src="./images/colleague2.jpg" alt="Усміхнена дівчина в піджаку" width="270" />
+                <div class="name-team-container">
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card-team-container">
+                <img
+                  src="./images/colleague3.jpg"
+                  alt="Усміхнений хлопець в блакитній сорочці"
+                  width="270"
+                />
+                <div class="name-team-container">
+                  <h3 class="team-name">Микола Тарасов</h3>
+                  <p class="team-position">Marketing</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="card">
+              <div class="card-team-container">
+                <img
+                  src="./images/colleague4.jpg"
+                  alt="Хлопець в окулярах та чорній футболці"
+                  width="270"
+                />
+                <div class="name-team-container">
+                  <h3 class="team-name">Михайло Єрмаков</h3>
+                  <p class="team-position">UI Designer</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="container">
       <a href="./index.html" lang="en" class="logo-footer"
         ><span class="logo-accent">Web</span>Studio</a
       >
@@ -161,17 +173,14 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com" class="address-list-item"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="address-list-item">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+380961111111" class="address-list-item"
-              >+38 096 111 11 11</a
-            >
+            <a href="tel:+380961111111" class="address-list-item">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
+      </div>
     </footer>
   </body>
 </html>
