--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="mailto:info@devstudio.com" class="contacts-item">info@devstudio.com</a>
           </li>
           <li>
-            <a href="" class="contacts-item">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="contacts-item">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
