--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             ><span class="logo-accent">Web</span>Studio</a
           >
           <ul class="navigation">
-            <li><a href="#" class="navigation-item">Студія</a></li>
+            <li><a href="#" class="navigation-item current">Студія</a></li>
             <li>
               <a href="./portfolio.html" class="navigation-item">Портфоліо</a>
             </li>
