--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
           <ul class="navigation">
             <li><a href="./index.html" class="navigation-item">Студія</a></li>
             <li>
-              <a href="#" class="navigation-item">Портфоліо</a>
+              <a href="#" class="navigation-item current">Портфоліо</a>
             </li>
             <li><a href="#" class="navigation-item">Контакти</a></li>
           </ul>
@@ -44,8 +44,8 @@
     </header>
     <main>
       <section class="filter">
-        <h1 class="visually-hidden">Фільтри</h1>
         <div class="container">
+          <h1 class="visually-hidden">Фільтри</h1>
           <ul class="filter-list">
             <li><button type="button" class="filter-button">Усі</button></li>
             <li><button type="button" class="filter-button">Веб-сайти</button></li>
